Added schedule get by uuid route
